too many rerender issue fixed

--- a/src/styles/noipunno_custom_styles.css
+++ b/src/styles/noipunno_custom_styles.css
@@ -26,6 +26,11 @@
   background-color: #efefef !important;
 }
 
+.editTeacherProfilePage {
+  height: 100vh;
+  background-color: #efefef !important;
+}
+
 .faq_page_bg_color {
   height: 100vh;
   background-color: #efefef !important;
