--- a/src/component/Home.style.module.css
+++ b/src/component/Home.style.module.css
@@ -1,5 +1,5 @@
 /* Font-Nikosh */
-@font-face {
+/* @font-face {
   font-family: 'Nikosh';
   src: url('../fonts/Nikosh.eot');
   src: url('../fonts/Nikosh.eot?#iefix') format('embedded-opentype'),
@@ -9,7 +9,7 @@
     url('../fonts/Nikosh.svg#Nikosh') format('svg');
   font-weight: normal;
   font-style: normal;
-}
+} */
 
 
 /* font-class Nikosh */
@@ -131,7 +131,7 @@
 /* nav tab start */
 .nav_tab_bottom_border :active {
   border-bottom: 2px solid #428f92;
-  padding-top  : 0px;
+  padding-top: 0px;
 }
 
 /* nav tab end */
