bg custome color added in index.htm div

--- a/src/styles/noipunno_custom_styles.css
+++ b/src/styles/noipunno_custom_styles.css
@@ -1,4 +1,4 @@
-.dashboard_page {
+/* .dashboard_page {
   height: 100vh;
   font-family: "Roboto" !important;
   background-color: #efefef !important;
@@ -13,7 +13,6 @@
 }
 
 .student_list_page {
-  height: 100vh;
   background-color: #efefef !important;
 }
 
@@ -32,7 +31,6 @@
 }
 
 .myProfilePage {
-  /* height: 100vh; */
   background-color: #efefef !important;
 }
 
@@ -44,4 +42,4 @@
 
 .teacher_compo_bg {
   background-color: #efefef !important;
-}
+} */
