--- a/src/assets/dashboard_materials/css/dashboard.css
+++ b/src/assets/dashboard_materials/css/dashboard.css
@@ -1,3 +1,7 @@
+@import url('../../fonts/font.css');
+
+.dashboard_body {}
+
 * {
   padding: 0;
   margin: 0;
@@ -33,6 +37,8 @@ h6 {
   --text_dark: #222222;
   --text_white: #ffffff;
 }
+
+
 
 @media (min-width: 1480px) {
 
